# directsearch

./: README.md  README.rst  dev_environment.txt  pyproject.toml  requirements.txt  setup.py  usage.txt
.github/workflows/: unit_tests.yml  upload_pypi.yml
benchmarking/: cutest_problems.json  cutest_problems_reduced.json  get_cutest_problems.py  get_reduced_cutest_problems.py  make_profiles.py  plot_pss_info.py  poll_set_examples.py  run_all_cutest.py  run_cutest_problem.py
directsearch/: __init__.py  ds.py  dspfd.py  interface.py  lincons.py  sketcher.py
directsearch/tests/: test_solver.py
examples/: nonconvex_regression.py  rosenbrock.py  rosenbrock_constrained.py
